k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2026-02-13T15:04:34Z"
  name: crunch-svc
  namespace: crunch
  resourceVersion: "51590882546"
  uid: eb26f0c0-a4fd-47fd-a7e9-3422fa1a88a8
spec:
  clusterIP: 10.3.227.234
  clusterIPs:
  - 10.3.227.234
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: crunch
  sessionAffinity: None
  type: ClusterIP
